[gd_scene load_steps=5 format=2]

[ext_resource path="res://Cenas/Ataques_e_habilidades/scripts/script_shuriken.gd" type="Script" id=1]
[ext_resource path="res://Cenas/Ataques_e_habilidades/Imagens/anima_shuriken.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "shuriken"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("IMG_shuriken:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IMG_shuriken:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("IMG_shuriken:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anima:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="Node2D" type="Node2D"]
position = Vector2( 153.796, 85.9135 )

[node name="Shuriken" type="Area2D" parent="."]
scale = Vector2( 0.56157, 0.556254 )
collision_layer = 4
collision_mask = 77
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shuriken"]
shape = SubResource( 1 )

[node name="IMG_shuriken" type="Sprite" parent="Shuriken"]
position = Vector2( 31.9681, -10.0429 )
scale = Vector2( 1.35553, 1.35553 )
texture = ExtResource( 2 )
hframes = 6
frame = 1

[node name="Anima" type="AnimationPlayer" parent="Shuriken"]
anims/shuriken = SubResource( 2 )

[node name="Timer" type="Timer" parent="Shuriken"]
wait_time = 1.5
autostart = true
[connection signal="area_entered" from="Shuriken" to="Shuriken" method="_on_Shuriken_area_entered"]
[connection signal="body_entered" from="Shuriken" to="Shuriken" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Shuriken/Timer" to="Shuriken" method="_on_Timer_timeout"]
